# exam_amb

./: .gitignore  README.md  note.txt  pyproject.toml  requirements  temp_test_db.db
.github/workflows/: ci.yml
amb/: definitions.py
amb/entities/: track.py
amb/src/: cli.py  main.py
amb/src/audio_handling/: audio_basic.py  audio_utilities.py  delete_me.py  effect_controller.py  ieffect_controller.py  track_configuration.py
amb/src/connection/: amb.db  db_management.py  engine_creation.py  manual.py
amb/src/entities/: configuration.py  playlist.py  playlist_track_association.py  random_interval.py  random_volume.py  track.py  user.py
amb/src/facades/: iEntityFacade.py  ientity_facade.py  track_facade.py
amb/src/gui/: gui.kv  gui.py
amb/src/gui/stuff/: gui_root.py  test.kv
amb/src/gui/tutorials/t01/: main.py
amb/src/gui/widgets/: root_widget.kv  test_widget.kv
amb/src/utilities/: decorators.py  exceptions.py  file_management.py  logging.py
amb/temp/: object_list_data.pkl
amb_back/: Pipfile  cli.py  settings.json  setup.py
amb_back/entities/: track.py
amb_back/logic/: basic.py  decorators.py
amb_back/rest/: endpoints.py
amb_back/settings/: configuration.ini  connector.py  pathing.py
amb_back/test/: test_logic.py  test_rest.py
docs/: amb.rst  conf.py  index.rst  modules.rst  tests.rst
tests/: test_amb.py  test_audio.py  test_database.py
