[tool.poetry]
name = "amb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme="README.rst"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
kivy = "^1.11.1"
requests = "^2.23.0"
nose2 = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.0.3"
flake8 = "^3.8.2"
black = "^19.10b0"
nose2 = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
